--- a/android/renderertest/build.gradle
+++ b/android/renderertest/build.gradle
@@ -3,6 +3,9 @@ apply plugin: 'com.android.application'
 android {
     flavorDimensions "target_platform"
     namespace "com.viromedia.renderertest"
+    buildFeatures {
+        buildConfig = true
+    }
     compileSdkVersion 31
 
     defaultConfig {
@@ -28,25 +31,25 @@ android {
             dimension "target_platform"
             resValue "string", "app_name", "RendererTest-gvr"
             applicationIdSuffix ".gvr"
-            //buildConfigField "String", "VR_PLATFORM", "\"GVR\""
+            buildConfigField "String", "VR_PLATFORM", "\"GVR\""
         }
         ovr {
             dimension "target_platform"
             resValue "string", "app_name", "RendererTest-ovr"
             applicationIdSuffix ".ovr"
-            //buildConfigField "String", "VR_PLATFORM", "\"OVR\""
+            buildConfigField "String", "VR_PLATFORM", "\"OVR\""
         }
         arcore {
             dimension "target_platform"
             resValue "string", "app_name", "RendererTest-arcore"
             applicationIdSuffix ".arcore"
-            //buildConfigField "String", "VR_PLATFORM", "\"ARCore\""
+            buildConfigField "String", "VR_PLATFORM", "\"ARCore\""
         }
         scene {
             dimension "target_platform"
             resValue "string", "app_name", "RendererTest-scene"
             applicationIdSuffix ".scene"
-            //buildConfigField "String", "VR_PLATFORM", "\"Scene\""
+            buildConfigField "String", "VR_PLATFORM", "\"Scene\""
         }
     }
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
