--- a/android/releasetest/build.gradle
+++ b/android/releasetest/build.gradle
@@ -5,6 +5,9 @@ android {
     flavorDimensions "target_platform"
     namespace "com.viromedia.releasetest"
     compileSdkVersion 31
+    buildFeatures {
+        buildConfig = true
+    }
 
     defaultConfig {
         applicationId "com.viromedia.releasetest"
@@ -31,38 +34,38 @@ android {
             dimension "target_platform"
             resValue "string", "app_name", "ReleasTest-gvr-vr"
             applicationIdSuffix ".gvr"
-            // buildConfigField "String", "VR_PLATFORM", "\"GVR\""
-            // buildConfigField "Integer", "VR_ENABLED", "1"
+            buildConfigField "String", "VR_PLATFORM", "\"GVR\""
+            buildConfigField "Integer", "VR_ENABLED", "1"
         }
 
         gvr_vr_disabled {
             dimension "target_platform"
             resValue "string", "app_name", "ReleasTest-gvr-360"
             applicationIdSuffix ".gvr"
-            // buildConfigField "String", "VR_PLATFORM", "\"GVR\""
-            // buildConfigField "Integer", "VR_ENABLED", "0"
+            buildConfigField "String", "VR_PLATFORM", "\"GVR\""
+            buildConfigField "Integer", "VR_ENABLED", "0"
         }
 
         ovr {
             dimension "target_platform"
             resValue "string", "app_name", "ReleaseTest-ovr"
             applicationIdSuffix ".ovr"
-            // buildConfigField "String", "VR_PLATFORM", "\"OVR\""
-            // buildConfigField "Integer", "VR_ENABLED", "1"
+            buildConfigField "String", "VR_PLATFORM", "\"OVR\""
+            buildConfigField "Integer", "VR_ENABLED", "1"
         }
         arcore {
             dimension "target_platform"
             resValue "string", "app_name", "ReleasTest-arcore"
             applicationIdSuffix ".arcore"
-            // buildConfigField "String", "VR_PLATFORM", "\"ARCore\""
-            // buildConfigField "Integer", "VR_ENABLED", "0"
+            buildConfigField "String", "VR_PLATFORM", "\"ARCore\""
+            buildConfigField "Integer", "VR_ENABLED", "0"
         }
         scene {
             dimension "target_platform"
             resValue "string", "app_name", "ReleasTest-scene"
             applicationIdSuffix ".scene"
-            // buildConfigField "String", "VR_PLATFORM", "\"Scene\""
-            // buildConfigField "Integer", "VR_ENABLED", "0"
+            buildConfigField "String", "VR_PLATFORM", "\"Scene\""
+            buildConfigField "Integer", "VR_ENABLED", "0"
         }
     }
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
