--- a/android/sharedCode/build.gradle
+++ b/android/sharedCode/build.gradle
@@ -10,11 +10,15 @@ apply plugin: 'maven-publish'
 android {
     flavorDimensions  "product"
     namespace "com.viro.renderer"
+    buildFeatures {
+        buildConfig = true
+    }
     compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 24
         targetSdkVersion 31
+        ndkVersion = "25.2.9519653"
 
         ndk {
             // Specifies the ABI configurations of your native
@@ -37,7 +41,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.0.0"
-    implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
+    implementation 'androidx.media3:media3-exoplayer:1.1.1'
+    implementation 'androidx.media3:media3-exoplayer-dash:1.1.1'
+    implementation 'androidx.media3:media3-exoplayer-hls:1.1.1'
+    implementation 'androidx.media3:media3-exoplayer-smoothstreaming:1.1.1'
     implementation project(':libs:gvr')
     implementation project(':libs:arcore')
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
