--- a/android/virocore/build.gradle
+++ b/android/virocore/build.gradle
@@ -5,6 +5,9 @@ apply plugin: 'maven-publish'
 android {
     compileSdkVersion 31
     namespace "com.viro.virocore"
+    buildFeatures {
+        buildConfig = true
+    }
 
     defaultConfig {
         minSdkVersion 24
@@ -82,7 +85,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "androidx.appcompat:appcompat:1.0.0"
-    implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
+    implementation 'androidx.media3:media3-exoplayer:1.1.1'
     api project(':libs:gvr')
     api project(':libs:arcore')
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
