Fixed bugs, rebuilt all submodules including viro_renderer.aar, upgraded to arcore 1.41.0. Tested with custom app.

--- a/android/viroar/build.gradle
+++ b/android/viroar/build.gradle
@@ -62,9 +62,17 @@ task extractNativeLibraries() {
 // are dynamically generated.
 tasks.whenTaskAdded { task ->
     if (task.name == 'assembleRelease') {
+        //task.dependsOn ':sharedCode:assembleRelease'
         task.finalizedBy 'extractNativeLibraries'
     }
 }
+
+// tasks.whenTaskAdded {
+//     task ->
+//         if (task.name.contains("external") && !task.name.contains("Clean")) {
+//             task.dependsOn ':sharedCode:assembleRelease'
+//         }
+// }
 
 // project.afterEvaluate {
 //     publishing {
