--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,6 +1,6 @@
 rootProject.name = 'ViroCORE'
 
-include ':sharedCode', ':libs:gvr', ':libs:arcore', ':renderertest', ':memoryleaktest', ':virocore', ':viroreact', ':viroar', ':releasetest', ':nativetest'
+include ':sharedCode', ':libs:gvr', ':renderertest', ':memoryleaktest', ':virocore', ':viroreact', ':viroar', ':releasetest', ':nativetest'
 
 include ':code-samples:gvr_common'
 include ':code-samples:arcore_client'
