--- a/android/virocore/build.gradle
+++ b/android/virocore/build.gradle
@@ -90,7 +90,7 @@ dependencies {
     implementation 'androidx.media3:media3-exoplayer-hls:1.1.1'
     implementation 'androidx.media3:media3-exoplayer-smoothstreaming:1.1.1'
     api project(':libs:gvr')
-    api project(':libs:arcore')
+    implementation 'com.google.ar:core:1.41.0'
     //implementation project(path: ':sharedCode')
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
 }
