--- a/android/viroreact/build.gradle
+++ b/android/viroreact/build.gradle
@@ -95,7 +95,7 @@ dependencies {
     implementation 'androidx.media3:media3-exoplayer-hls:1.1.1'
     implementation 'androidx.media3:media3-exoplayer-smoothstreaming:1.1.1'
     implementation project(':libs:gvr')
-    implementation project(':libs:arcore')
+    implementation 'com.google.ar:core:1.41.0'
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
 }
 
