--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,8 +14,8 @@ jobs:
       - name: set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'adopt'
-          java-version: 11
+          distribution: "adopt"
+          java-version: 17
 
       - name: assemble ViroCore
         run: |
@@ -45,7 +45,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: "adopt"
-          java-version: 11
+          java-version: 17
       - name: Code checks
         run: ./gradlew check
       - name: Archive Lint report
@@ -62,8 +62,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        xcode: [ '12.5.1', '13.2.1' ]
-        macOS: [ 'macOS-11' ]
+        xcode: ["12.5.1", "13.2.1"]
+        macOS: ["macOS-11"]
     steps:
       - uses: actions/checkout@v3.3.0
       - name: Install gpg
