--- a/android/viroreact/build.gradle
+++ b/android/viroreact/build.gradle
@@ -6,6 +6,10 @@ android {
     namespace "com.viro.viroreact"
     buildFeatures {
         buildConfig = true
+    }  
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     defaultConfig {
