--- a/android/virocore/build.gradle
+++ b/android/virocore/build.gradle
@@ -9,6 +9,10 @@ android {
         buildConfig = true
     }
 
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
     defaultConfig {
         minSdkVersion 24
         targetSdkVersion 31
