--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: assemble ViroCore
         run: |
-          ./gradlew assembleDebug
+          ./gradlew :viroreact:assembleDebug
         working-directory: ./android
       - name: Upload result ViroCore
         uses: actions/upload-artifact@v3.1.2
@@ -47,7 +47,7 @@ jobs:
           distribution: "adopt"
           java-version: 17
       - name: Code checks
-        run: ./gradlew check
+        run: ./gradlew :viroreact:check
       - name: Archive Lint report
         uses: actions/upload-artifact@v3.1.2
         if: ${{ always() }}
