chore: update release script

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
         uses: malinskiy/action-android/install-sdk@release/0.1.3
 
       - name: Build project
-        run: ./gradlew assembleRelease
+        run: ./gradlew :viroreact:assembleRelease
         working-directory: ./android
 
       - name: Create Release
