--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,12 +14,12 @@ jobs:
       - name: set up JDK
         uses: actions/setup-java@v3
         with:
-          distribution: 'adopt'
-          java-version: 11
+          distribution: "adopt"
+          java-version: 17
 
       - name: assemble ViroCore
         run: |
-          ./gradlew assembleDebug
+          ./gradlew :viroreact:assembleDebug
         working-directory: ./android
       - name: Upload result ViroCore
         uses: actions/upload-artifact@v3.1.2
@@ -41,13 +41,13 @@ jobs:
         uses: actions/checkout@v3.3.0
         with:
           fetch-depth: 0
-      - name: Install JDK 11
+      - name: Install JDK
         uses: actions/setup-java@v3
         with:
           distribution: "adopt"
-          java-version: 11
+          java-version: 17
       - name: Code checks
-        run: ./gradlew check
+        run: ./gradlew :viroreact:check
       - name: Archive Lint report
         uses: actions/upload-artifact@v3.1.2
         if: ${{ always() }}
@@ -62,8 +62,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        xcode: [ '12.5.1', '13.2.1' ]
-        macOS: [ 'macOS-11' ]
+        xcode: ["14.2.0", "13.4.1"]
+        macOS: ["macos-12"]
     steps:
       - uses: actions/checkout@v3.3.0
       - name: Install gpg
@@ -79,12 +79,12 @@ jobs:
       - name: Xcodebuild iOS Renderer (non-static)
         run: |
           cd ios
-          xcodebuild \
+           set -o pipefail && xcodebuild \
             -workspace ViroRenderer.xcworkspace \
             -scheme ViroKit \
             -sdk iphoneos \
             -configuration Release \
-            IPHONEOS_DEPLOYMENT_TARGET=9.0
+            IPHONEOS_DEPLOYMENT_TARGET=13.0 | xcpretty
 
       - name: Upload iOS Renderer artifact
         uses: actions/upload-artifact@v3.1.2
