--- a/android/code-samples/ARBlackPanther/build.gradle
+++ b/android/code-samples/ARBlackPanther/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
+    namespace "com.example.virosample.blackPanther"
 
     defaultConfig {
         minSdkVersion 24
-        targetSdkVersion 31
+        targetSdkVersion 33
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        ndkVersion = "25.2.9519653"
         ndk {
             abiFilters "arm64-v8a", "armeabi-v7a", "x86", "armeabi", "mips"
         }
@@ -31,8 +33,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     api project(':code-samples:gvr_common')
@@ -43,5 +45,5 @@ dependencies {
     codeImplementation (project(path: ':virocore')) {
         transitive = false
     }
-    implementation 'com.google.protobuf.nano:protobuf-javanano:3.2.0rc2'
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
 }
