--- a/android/mainSample/build.gradle
+++ b/android/mainSample/build.gradle
@@ -2,15 +2,19 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
+    namespace "com.example.virosample"
+    buildFeatures {
+        buildConfig = true
+    }
 
     defaultConfig {
         applicationId "com.example.virosample"
         minSdkVersion 24
-        targetSdkVersion 31
+        targetSdkVersion 33
 
-        versionCode getGitCommitCount()
-        versionName getTag()
+        // versionCode getGitCommitCount()
+        // versionName getTag()
         buildConfigField "String", 'GIT_REPOSITORY', "\"" + getGitOriginRemote() + "\""
         buildConfigField "String", 'VERSION', "\"" + versionName + "\""
     }
@@ -42,7 +46,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
@@ -55,8 +59,8 @@ dependencies {
     implementation project(':code-samples:ARRetail')
     implementation project(':code-samples:ARTesla')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.21"
+    implementation "androidx.core:core-ktx:1.8.0"
 }
 
 static def getTag() {
