--- a/android/releasetest/build.gradle
+++ b/android/releasetest/build.gradle
@@ -3,12 +3,16 @@ apply plugin: 'kotlin-android'
 
 android {
     flavorDimensions "target_platform"
-    compileSdkVersion 31
+    namespace "com.viromedia.releasetest"
+    compileSdkVersion 33
+    buildFeatures {
+        buildConfig = true
+    }
 
     defaultConfig {
         applicationId "com.viromedia.releasetest"
         minSdkVersion 24
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -77,21 +81,21 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation project(':virocore')
-    implementation project(':libs:arcore')
+    implementation 'com.google.ar:core:1.41.0'
     implementation project(':libs:gvr')
-    implementation "androidx.appcompat:appcompat:1.3.1"
+    implementation "androidx.appcompat:appcompat:1.0.0"
     // testing dependencies
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0"
     androidTestImplementation 'androidx.test:rules:1.4.0'
     androidTestImplementation "androidx.test:runner:1.4.0"
 
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.ext:junit:1.1.4"
     androidTestImplementation "androidx.test.ext:truth:1.4.0"
     androidTestImplementation('org.awaitility:awaitility:4.1.1') {
         transitive = false
     }
-    implementation "androidx.core:core-ktx:1.6.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.core:core-ktx:1.8.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.21"
 }
