--- a/android/sharedCode/build.gradle
+++ b/android/sharedCode/build.gradle
@@ -9,11 +9,16 @@ apply plugin: 'maven-publish'
 
 android {
     flavorDimensions  "product"
-    compileSdkVersion 31
+    namespace "com.viro.renderer"
+    buildFeatures {
+        buildConfig = true
+    }
+    compileSdkVersion 33
 
     defaultConfig {
         minSdkVersion 24
-        targetSdkVersion 31
+        targetSdkVersion 33
+        ndkVersion = "25.2.9519653"
 
         ndk {
             // Specifies the ABI configurations of your native
@@ -35,21 +40,24 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.3.1"
-    implementation 'com.google.android.exoplayer:exoplayer:2.18.4'
+    implementation "androidx.appcompat:appcompat:1.0.0"
+    implementation 'androidx.media3:media3-exoplayer:1.1.1'
+    implementation 'androidx.media3:media3-exoplayer-dash:1.1.1'
+    implementation 'androidx.media3:media3-exoplayer-hls:1.1.1'
+    implementation 'androidx.media3:media3-exoplayer-smoothstreaming:1.1.1'
     implementation project(':libs:gvr')
-    implementation project(':libs:arcore')
-    implementation 'com.google.protobuf.nano:protobuf-javanano:3.2.0rc2'
-    implementation "androidx.core:core-ktx:1.7.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'com.google.ar:core:1.41.0'
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
+    implementation "androidx.core:core-ktx:1.8.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.21"
 }
 
-project.afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-            }
-        }
-    }
-}
+// project.afterEvaluate {
+//     publishing {
+//         publications {
+//             release(MavenPublication) {
+//                 from components.release
+//             }
+//         }
+//     }
+// }
