--- a/android/viroreact/build.gradle
+++ b/android/viroreact/build.gradle
@@ -2,11 +2,20 @@ apply plugin: 'com.android.library'
 apply plugin: 'maven-publish'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
+    namespace "com.viro.viroreact"
+    buildFeatures {
+        buildConfig = true
+    }  
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
 
     defaultConfig {
         minSdkVersion 24
-        targetSdkVersion 31
+        targetSdkVersion 33
+        ndkVersion = "25.2.9519653"
 
         ndk {
             // React Native does not support arm64-v8a yet, so don't bother including
@@ -84,11 +93,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.3.1"
-    implementation 'com.google.android.exoplayer:exoplayer:2.18.4'
+    implementation "androidx.appcompat:appcompat:1.0.0"
+    implementation 'androidx.media3:media3-exoplayer:1.1.1'
+    implementation 'androidx.media3:media3-exoplayer-dash:1.1.1'
+    implementation 'androidx.media3:media3-exoplayer-hls:1.1.1'
+    implementation 'androidx.media3:media3-exoplayer-smoothstreaming:1.1.1'
     implementation project(':libs:gvr')
-    implementation project(':libs:arcore')
-    implementation 'com.google.protobuf.nano:protobuf-javanano:3.2.0rc2'
+    implementation 'com.google.ar:core:1.41.0'
+    implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
 }
 
 task copyReleaseAAR(type: Copy) {
@@ -129,12 +141,12 @@ tasks.whenTaskAdded { task ->
     }
 }
 
-project.afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-            }
-        }
-    }
-}
+// project.afterEvaluate {
+//     publishing {
+//         publications {
+//             release(MavenPublication) {
+//                 from components.release
+//             }
+//         }
+//     }
+// }
