--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -47,7 +47,7 @@ jobs:
           distribution: "adopt"
           java-version: 17
       - name: Code checks
-        run: ./gradlew :viroreact:check
+        run: ./gradlew check
       - name: Archive Lint report
         uses: actions/upload-artifact@v4.4.0
         if: ${{ always() }}
