--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: assemble ViroCore
         run: |
-          ./gradlew :viroreact:assembleDebug
+          ./gradlew assembleDebug
         working-directory: ./android
       - name: Upload result ViroCore
         uses: actions/upload-artifact@v4.4.0
