--- a/android/code-samples/ARPlacingObjects/build.gradle
+++ b/android/code-samples/ARPlacingObjects/build.gradle
@@ -51,13 +51,13 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     api project(':code-samples:gvr_common')
     api project(':code-samples:arcore_client')
-    aarImplementation('com.github.ViroCommunity.virocore:virocore:rc-1.20.2') {
+    aarImplementation(project(path: ':virocore')) {
         transitive = false
     }
     codeImplementation (project(path: ':virocore')) {
         transitive = false
     }
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
-    implementation "androidx.core:core-ktx:1.8.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.21"
+    implementation "androidx.core:core-ktx:1.10.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.0.0"
 }
