--- a/android/code-samples/ARRetail/build.gradle
+++ b/android/code-samples/ARRetail/build.gradle
@@ -39,10 +39,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     api project(':code-samples:gvr_common')
     api project(':code-samples:arcore_client')
-    aarImplementation('com.github.ViroCommunity.virocore:virocore:rc-1.20.2') {
+    aarImplementation(project(path: ':virocore')) {
         transitive = false
     }
-    codeImplementation (project(path: ':virocore')) {
+    codeImplementation(project(path: ':virocore')) {
         transitive = false
     }
     implementation 'com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7'
