--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -23,6 +23,7 @@ jobs:
           ./gradlew :viroreact:assembleDebug
           ./gradlew :code-samples:ARHelloWorldAndroid:assembleDebug
           ./gradlew :code-samples:ARBlackPanther:assembleDebug
+          ./gradlew :mainSample:assembleDebug
         working-directory: ./android
       - name: Upload result ViroCore
         uses: actions/upload-artifact@v4.4.0
