--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -21,6 +21,8 @@ jobs:
       - name: assemble ViroCore
         run: |
           ./gradlew :viroreact:assembleDebug
+          ./gradlew :code-samples:ARHelloWorldAndroid
+          ./gradlew :code-samples:ARBlackPanther
         working-directory: ./android
       - name: Upload result ViroCore
         uses: actions/upload-artifact@v4.4.0
