Fix inconsistent JVM-target compatibility

--- a/android/mainSample/build.gradle
+++ b/android/mainSample/build.gradle
@@ -28,7 +28,10 @@ android {
             applicationIdSuffix ".debug"
         }
     }
-
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
     packagingOptions {
         exclude "META-INF/*.kotlin_module"
     }
