--- a/android/code-samples/ARPlacingObjects/build.gradle
+++ b/android/code-samples/ARPlacingObjects/build.gradle
@@ -14,7 +14,10 @@ android {
             abiFilters "arm64-v8a", "armeabi-v7a", "x86", "armeabi", "mips"
         }
     }
-
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
     lintOptions {
         disable 'UsingOnClickInXml'
     }
