--- a/android/mainSample/build.gradle
+++ b/android/mainSample/build.gradle
@@ -13,10 +13,10 @@ android {
         minSdkVersion 24
         targetSdkVersion 34
 
-        // versionCode getGitCommitCount()
-        // versionName getTag()
+        versionCode getGitCommitCount()
+        versionName getTag()
         buildConfigField "String", 'GIT_REPOSITORY', "\"" + getGitOriginRemote() + "\""
-        buildConfigField "String", 'VERSION', "\"" + versionName + "\""
+        buildConfigField "String", 'VERSION', "\"" + getTag() + "\""
     }
 
     buildTypes {
