--- a/android/mainSample/build.gradle
+++ b/android/mainSample/build.gradle
@@ -13,10 +13,10 @@ android {
         minSdkVersion 24
         targetSdkVersion 34
 
-        // versionCode getGitCommitCount()
-        // versionName getTag()
+        versionCode getGitCommitCount()
+        versionName getTag()
         buildConfigField "String", 'GIT_REPOSITORY', "\"" + getGitOriginRemote() + "\""
-        buildConfigField "String", 'VERSION', "\"" + versionName + "\""
+        buildConfigField "String", 'VERSION', "\"" + getTag() + "\""
     }
 
     buildTypes {
@@ -67,18 +67,8 @@ dependencies {
 }
 
 static def getTag() {
-    def tagVersion = "$System.env.TAG_VERSION"
-    if (tagVersion == "null") {
-        println "No variable TAG_VERSION specified, I'm using 'git describe --abbrev=0'"
-        def process = "git describe --abbrev=0".execute()
-        tagVersion = process.text.toString().trim()
-        if (tagVersion.equals("")) {
-            println "abbrev failed, I'm using 'git --tags'"
-            def processT = "git describe --tags".execute()
-            tagVersion = processT.text.toString().trim()
-        }
-    }
-    return tagVersion
+    def process = "git describe --tags --abbrev=0".execute()
+    return process.text.toString().trim()
 }
 
 static def getGitCommitCount() {
