chore: debug vertical plane detection and add 16kb page size for Android

--- a/android/sharedCode/CMakeLists.txt
+++ b/android/sharedCode/CMakeLists.txt
@@ -467,4 +467,5 @@ target_link_libraries( # Specifies the target library.
 
                        cpufeatures
                        ${lib-z}
+                       "-Wl,-z,max-page-size=16384"
         )
