--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,6 +2,9 @@ platform :ios, '13.0'
 
 def common_pods
     pod 'GVRAudioSDK', '1.140.0'
+    # ARCore SDK for Cloud Anchors support on iOS
+    # Requires Google Cloud API key in Info.plist
+    pod 'ARCore/CloudAnchors', '~> 1.51.0'
 end
 
 target 'ViroSample' do
