--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,10 +2,11 @@ platform :ios, '13.0'
 
 def common_pods
     pod 'GVRAudioSDK', '1.140.0'
-    # ARCore SDK for Cloud Anchors and Geospatial support on iOS
+    # ARCore SDK for Cloud Anchors, Geospatial, and Semantics support on iOS
     # Requires Google Cloud API key in Info.plist
     pod 'ARCore/CloudAnchors', '~> 1.51.0'
     pod 'ARCore/Geospatial', '~> 1.51.0'
+    pod 'ARCore/Semantics', '~> 1.51.0'
 end
 
 target 'ViroSample' do
