feat: add depth mesh generation, fix android semantics

--- a/android/sharedCode/CMakeLists.txt
+++ b/android/sharedCode/CMakeLists.txt
@@ -313,6 +313,8 @@ add_library( # Sets the name of the library.
              ${VIRO_RENDERER_SRC}/VROPhysicsWorld.cpp
              ${VIRO_RENDERER_SRC}/VROPhysicsBody.cpp
              ${VIRO_RENDERER_SRC}/VROPhysicsShape.cpp
+             ${VIRO_RENDERER_SRC}/VROARDepthMesh.cpp
+             ${VIRO_RENDERER_SRC}/VROARWorldMesh.cpp
 
              # Android JNI
              ${VIRO_ANDROID_SRC}/jni/VRORenderer_JNI.cpp
